--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,17 @@
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Where Community meets crypto" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=BioRhyme:wght@200..800&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Jura:wght@300..700&display=swap"
+			rel="stylesheet"
+		/>
 		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
